--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.3.0",
+    "gulp-watch": "^4.3.11",
     "lodash": "^4.16.4",
     "yargs": "^6.3.0"
   }
