--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "browser-sync": "^2.17.5",
     "gulp": "^3.9.1",
     "gulp-htmlmin": "^3.0.0",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-minify-css": "^1.2.4"
+    "gulp-imagemin": "^3.1.1"
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.3.0",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-concat": "^2.6.1",
+    "gulp-if": "^2.0.2",
+    "gulp-uglify-cli": "^0.1.7",
     "gulp-watch": "^4.3.11",
     "lodash": "^4.16.4",
     "yargs": "^6.3.0"
